added csrf and rand package

--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,5 +1,8 @@
 {{ template "header" .}}
 <div class="px-6">
-  <p class="py-4 text-2xl semibold tracking-tight">To get in touch, email me at <a href="mailto:bozo@gmail.com">Bozo@gmail.com</a></p>
+  <p class="py-4 text-2xl semibold tracking-tight">
+    To get in touch, email me at
+    <a href="mailto:bozo@gmail.com">Bozo@gmail.com</a>
+  </p>
 </div>
 {{ template "footer" .}}
