--- a/templates/faq.gohtml
+++ b/templates/faq.gohtml
@@ -1,18 +1,19 @@
 {{ template "header" . }}
 <div class="px-6">
-    <h1 class="py-4 text-4xl semibold tracking-tight">FAQs</h1> 
-    <ul class="grid grid-cols-2 gap-16">
-        {{ range . }}
-            {{ template "qa" .}}
-        {{ end }}
-    </ul>
+  <h1 class="py-4 text-4xl semibold tracking-tight">FAQs</h1>
+  <ul class="grid grid-cols-2 gap-16">
+    {{ range . }}
+    {{ template "qa" .}}
+    {{
+      end
+    }}
+  </ul>
 </div>
 {{ template "footer" }}
 
-
 {{ define "qa" }}
-<li class="border-t border-indigo-400 py-1 px-2" >
-    <span class="block text-lg text-grey-800 semibold"> {{ .Question }} </span> 
-    <span class="block text-sm text-grey-500"> {{ .Answer }} </span> 
+<li class="border-t border-indigo-400 py-1 px-2">
+  <span class="block text-lg text-grey-800 semibold"> {{ .Question }} </span>
+  <span class="block text-sm text-grey-500"> {{ .Answer }} </span>
 </li>
-{{end}}
+{{ end }}
