--- a/templates/signin.gohtml
+++ b/templates/signin.gohtml
@@ -6,6 +6,7 @@
     </h1>
     <form action="/signin" method="post">
       <div class="py-2">
+        <input type="hidden" name="csrf" value="" />
         <label class="text-sm font-semibold text-gray-800">Email Address</label>
         <input
           class="w-full px-3 py-2 border border-gray-300 placeholder-gray-400 text-gray-800 rounded"
